Thu Sep 13 01:33:49 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc,backends/flint/flint_database.h:
	  Store the total_length and lastdocid values in FlintDatabase object.

Wed Sep 12 20:27:49 BST 2007  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Eliminate a block which used to scope some
	  variables which have now moved.  Unify debug output from different
	  cases after the match.  Remove half-finished comment which doesn't
	  seem to be trying to say anything useful.

Wed Sep 12 20:20:18 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: In checkatleast2, the total number of matching
	  documents in the database is 5, so use TEST_EQUAL instead of
	  TEST_GREATER_OR_EQUAL to compare get_matches_lower_bound() with 5.

Wed Sep 12 17:55:00 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.h: Fix some comment typos and
	  outdated information.  Remove some superfluous uses of "virtual".

Wed Sep 12 17:15:58 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc,backends/quartz/quartz_database.cc:
	  Failing to create a flint or quartz database because we couldn't
	  create the directory for it now throws DatabaseCreateError not
	  DatabaseOpeningError.
	* tests/api_db.cc: Update test cases.

Wed Sep 12 15:40:16 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc,backends/flint/flint_database.h:
	  If we reach the flush threshold during a transaction, flush the
	  postlist changes, but don't actually commit them.

Wed Sep 12 14:12:52 BST 2007  Olly Betts <olly@survex.com>

	* common/msvc_posix_wrapper.cc,common/msvc_posix_wrapper.h: Add
	  msvc_posix_rename() which can rename a file on top of another file.
	* common/stringutils.h: Add common_prefix_length() function.
	* backends/flint/: Clean up FlintWritableDatabase - it now just
	  inherits from FlintDatabase which allows several virtual methods